Bugfix: close icon alignment in alerts.

--- a/Resources/public/scss/_icons_overrides.scss
+++ b/Resources/public/scss/_icons_overrides.scss
@@ -45,7 +45,11 @@
 	display: block;
     position: absolute;
     right: 0.25em;
-    top: 0.4em;
+    top: 0.25em;
+}
+
+.alert-success .close  {
+	top: 0.4em;
 }
 
 .alert-success:before {
